# git-outta-here

./: README.md  package.json  pulse_analyzer.py  rollup.config.js
archive/: PROJECT_ARCHITECTURE.md
data-explorer-cli/: .gitignore  Cargo.toml  FINAL_RESULTS.md  README.md  TEST_RESULTS.md  test_runner.sh
data-explorer-cli/src/: lib.rs  main.rs
data-explorer-cli/src/cli/: args.rs  commands.rs  mod.rs  output.rs
data-explorer-cli/src/data/: mod.rs
data-explorer-cli/src/data/inference/: mod.rs
data-explorer-cli/src/data/input/: csv.rs  detector.rs  mod.rs  parquet.rs
data-explorer-cli/src/data/optimization/: mod.rs
data-explorer-cli/src/data/validation/: mod.rs
data-explorer-cli/src/html/: mod.rs
data-explorer-cli/src/utils/: config.rs  errors.rs  logging.rs  mod.rs
data-explorer-cli/tests/: integration_tests.rs
data-explorer-cli/tests/fixtures/: large_dataset.csv  sample_data.csv
iteration-2/src/: NeuralNetworkChart.js
iteration-3/: README.md  lightweight_demo.html  performance_demo.html  performance_test_suite.html
iteration-4/: README.md  lightweight_demo.html  modular_demo.html  test_core.js  test_runner.html
iteration-5/: README.md  data_explorer_zoom.html
src/: index.js
src/charts/: BaseChart.js
src/constants/: index.js
src/core/: ChartManager.js  DataExplorer.js  DataManager.js  FilterManager.js  LayoutEngine.js
src/types/: index.js
v13-realtime-streaming/: common_mistakes_analysis.md  performance_report.txt  robust_chart_system.html  streaming_dashboard.html  test_streaming.py
